2009-12-26  Murray Cumming  <murrayc@murrayc.com>

	* docs/book/C/telepathy.xml: Basics: Handles: Write this section. 
	Removed the main Handles chapter because a) It was planned to cover the 
	same stuff and b) It should be covered very early.

2009-12-26  Murray Cumming  <murrayc@murrayc.com>

	* docs/book/C/telepathy.xml: Basics: D-Bus, telepathy-glib: Explicitly 
	point out that we are dealing with proxies, not the objects themselves.
	Added a Headers and Linking sub-section.
	ConnectionManager chapter: Mention how to list connection managers and 
	their proxies, with links to the spec and reference documetnation. 
	Move the list_protocols example here.
	Connection: Mention RequestConnection() and the telepathy-glib 
	equivalent. 

2009-12-23  Murray Cumming  <murrayc@murrayc.com>

	* docs/book/C/telepathy.xml: Basics: Correct the use of the indexterm 
	tags. Their contents are not displayed in the main text.

2009-12-23  Murray Cumming  <murrayc@murrayc.com>

	* docs/book/C/telepathy.xml: Basics: telepathy-glib: Mention sync/async 
	prefixes. Mention generated/hand-coded prefixes. Mention 
	call_when_ready() functions.

2009-12-23  Murray Cumming  <murrayc@murrayc.com>

	* docs/examples/basics_dbus_glib/main.c:
	* docs/examples/basics_dbus_python/example.py: Call the D-Bus method 
	asynchronously instead of synchronously.
	* docs/book/C/telepathy.xml: Basics: Using D-Bus: Mention simple D-Bus 
	concepts. Mention asyncronous calls, and say how we do that in the 
	examples.
	Added an Installation chapter.
	Added an index and sprinkled some indexterm tags around to fill it.

2009-12-22  Murray Cumming  <murrayc@murrayc.com>

	* docs/book/C/telepathy.xml: Basics: Add a Language Bindings sub-section 
	as a way to mention telepathy-glib, which we use (so far) for all our 
	examples.

2009-12-22  Murray Cumming  <murrayc@murrayc.com>

	* docs/book/C/telepathy.xml: Basics: Move the boring stuff about 